--- a/index.html
+++ b/index.html
@@ -51,10 +51,14 @@
         letter-spacing: 3px;
       }
     }
+
+    h1 {
+      color: rbga(255,255,255,0.7);
+    }
   </style>
 </head>
 <body>
-
+  <h1>Timer to Stranger Things Season 5 Volume 2</h1>
   <!-- Background video -->
   <video id="bgVideo" autoplay muted loop playsinline>
     <source src="st - Made with Clipchamp.mp4" type="video/mp4">
