--- a/index.html
+++ b/index.html
@@ -87,13 +87,14 @@
     const timerText = document.getElementById("timerText");
 
     const target = new Date(
-      new Date().getFullYear(),
-      12, // December
-      1,
-      1,
-      30,
-      0
+      2026, // year
+      0,    // January (0-based index)
+      1,    // day
+      1,    // 1 AM
+      30,   // 30 minutes
+      0     // seconds
     );
+
 
     function tick() {
       const now = new Date();
