--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     }
 
     #timerText {
-      font-size: 100px;
+      font-size: 150px;
     }
 
     #labelText {
-      font-size: 60px;
+      font-size: 40px;
       letter-spacing: 4px;
     }
 
@@ -81,12 +81,13 @@
 
         <!-- TIMER -->
         <text id="timerText" x="500" y="270">
-          000:00:00:00
+          00:00:00:00
+          DAYS:HOURS:MINUTES:SECONDS
         </text>
 
         <!-- LABEL -->
         <text id="labelText" x="500" y="360">
-          STRANGER THINGS S5 • VOLUME 2
+          STRANGER THINGS S5 • THE FINALE
         </text>
       </mask>
     </defs>
