--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
       letter-spacing: 4px;
     }
 
+    #labell{
+      font-size: 20px;
+      letter-spacing: 4px;
+    }
+
     /* 📱 Phone optimization */
     @media (max-width: 768px) {
       #timerText {
@@ -82,6 +87,9 @@
         <!-- TIMER -->
         <text id="timerText" x="500" y="270">
           00:00:00:00
+        </text>
+
+        <text id="labell" x="500" y="315">
           DAYS:HOURS:MINUTES:SECONDS
         </text>
 
